# deepgrp

./: .dockerignore  .gitignore  Dockerfile  README.rst  build.py  defaults.toml  pyproject.toml
.github/workflows/: test.yml
deepgrp/: __init__.py  __main__.py  maxcalc.c  maxcalc.h  model.py  mss.pxd  mss.pyi  optimization.py  prediction.py  preprocessing.py  sequence.pyi  sequence.pyx  training.py
deepgrp/_mss/: mss.c  mss.h  pymss.pyx
deepgrp/_scripts/: parse_rm.py  preprocess_sequence.py
notebooks/: DeepGRP.ipynb  Training.ipynb
tests/: conftest.py  test_main.py  test_model.json  test_model.py  test_model21.json  test_model22.json  test_model23.json  test_model24.json  test_model25.json  test_mss.py  test_optimization.py  test_parse_rm.py  test_parse_rm_expect.bed  test_parse_rm_input.out  test_prediction.py  test_preprocess_sequence.py  test_preprocessing.py  test_sequence.py  test_training.py
