[tool.poetry]
name = "deepgrp"
version = "0.2.0"
description = "DNA repeat annotations"
authors = ["Fabian Hausmann <fabian.hausmann@zmnh.uni-hamburg.de>", "Stefan Kurtz <kurtz@zbh.uni-hamburg.de>"]

build = "build.py"

[tool.poetry.dependencies]
python = "^3.6.1"
tensorflow = "2.1.0"
pandas = "^1.0.1"
numpy = "^1.18.1"
Cython = "^0.29.15"
hyperopt = "^0.2.3"
toml = "^0.10.0"


[tool.poetry.dev-dependencies]
ipykernel = "^5.1.4"

[tool.poetry.extras]
preprocess_sequence = ["preprocess_sequence"]
parse_rm = ["parse_rm"]

[tool.poetry.scripts]
preprocess_sequence = 'deepgrp._scripts.preprocess_sequence:main'
parse_rm = 'deepgrp._scripts.parse_rm:main'
deepgrp = 'deepgrp.__main__:main'

[build-system]
requires = ["poetry>=0.12", "Cython", "numpy", "setuptools"]
build-backend = "poetry.masonry.api"
