[tool.poetry]
name = "deepgrp"
version = "0.2.2"
description = "DNA repeat annotations"
authors = ["Fabian Hausmann <fabian.hausmann@zmnh.uni-hamburg.de>", "Stefan Kurtz <kurtz@zbh.uni-hamburg.de>"]
license= "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/fhausmann/deepgrp"

build = "build.py"

[tool.poetry.dependencies]
python = ">=3.6.0,<3.8.0"
tensorflow = ">=2.1.0,<2.2.0"
pandas = "^1.0.1"
numpy = "^1.18.1"
hyperopt = "^0.2.3"
toml = "^0.10.0"


[tool.poetry.dev-dependencies]
ipykernel = "^5.1.4"
Cython = "^0.29.23"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
pylint = "^2.8.2"
mypy = "^0.812"

[tool.poetry.scripts]
preprocess_sequence = 'deepgrp._scripts.preprocess_sequence:main'
parse_rm = 'deepgrp._scripts.parse_rm:main'
deepgrp = 'deepgrp.__main__:main'

[build-system]
requires = ["poetry_core>=1.0.0", "Cython", "numpy", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = "import-error"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=deepgrp --cov-report=term"
testpaths = [
    "tests",
]
