[tool.poetry]
name = "deepgrp"
version = "0.2.2"
description = "DNA repeat annotations"
authors = ["Fabian Hausmann <fabian.hausmann@zmnh.uni-hamburg.de>", "Stefan Kurtz <kurtz@zbh.uni-hamburg.de>"]
license= "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/fhausmann/deepgrp"

build = "build.py"

[tool.poetry.dependencies]
python = ">=3.6.1,<3.9.0"
tensorflow = ">=2.1.0,<2.6.0"
pandas = "^1.0.1"
numpy = "^1.18.1"
hyperopt = "^0.2.3"
toml = "^0.10.0"


[tool.poetry.dev-dependencies]
ipykernel = "^5.1.4"
Cython = "^0.29.23"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
pylint = "^2.8.2"
mypy = "^0.812"
yapf = "^0.31.0"
freezegun = "^1.1.0"
pycm = "^3.1"
tox = "^3.23.1"
tox-wheel = "^0.6.0"

[tool.poetry.scripts]
preprocess_sequence = 'deepgrp._scripts.preprocess_sequence:main'
parse_rm = 'deepgrp._scripts.parse_rm:main'
deepgrp = 'deepgrp.__main__:main'

[build-system]
requires = ["poetry_core>=1.0.0", "Cython", "numpy", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = "import-error"
extension-pkg-allow-list = [
    "deepgrp.sequence",
    "deepgrp.mss",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=deepgrp --cov-report=term"
testpaths = [
    "tests",
]


[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist =  py36-tf21,py37-{tf21,tf22,tf23,tf24},py38-{tf23,tf24,tf25}


[testenv]
wheel = true
setenv = POETRY_VIRTUALENVS_CREATE = false

deps =
    pytest
    pytest-cov
    freezegun
    pycm
    poetry
    py36-tf21:    tensorflow>=2.1.0,<2.2.0
    py37-tf21:    tensorflow>=2.1.0,<2.2.0
    py37-tf22:    tensorflow>=2.2.0,<2.3.0
    py37-tf23:    tensorflow>=2.3.0,<2.4.0
    py37-tf24:    tensorflow>=2.4.0,<2.5.0
    py38-tf24:    tensorflow>=2.4.0,<2.5.0
    py38-tf25:    tensorflow>=2.5.0,<2.6.0

commands =
    python -c "import tensorflow; print(tensorflow.__version__)"
    pytest --no-cov  -p no:warnings
"""
